# CPS_IOT_HW

./: Answers.md  README.md
CA1/Client/CPSMonitoringSystemGUI/: CMakeLists.txt  CMakeLists.txt.user.288b99a  CMakeLists.txt.user.31513c2  cpsapplication.cpp  cpsapplication.h  cpsmainwindow.cpp  cpssocket.cpp  cpssocket.h
CA1/Description/: .$Flowchart.drawio.bkp
CA1/Embedded/sketch_apr27a/: sketch_apr27a.ino
CA1/Http/: CMakeLists.txt  customizedhttpserver.cpp  customizedhttpserver.h  employee.cpp  employeesdatabase.cpp  employeesdatabase.h  main.cpp
CA1/Http/data/: admins_info.json  employee_info.json
CA1/Pics/: .$Flowchart.drawio.bkp  Flowchart.drawio
CA1/Proteus/: CPS CA1.pdsprj  CPS CA1.pdsprj.DESKTOP-2991RI6.bardia.workspace
CA1/Proteus/Project Backups/: CPS CA1 [20240427, 15-15-42].pdsprj  CPS CA1 [20240427, 15-37-17].pdsprj  CPS CA1 [20240427, 15-49-03].pdsprj  CPS CA1 [20240427, 15-49-04].pdsprj  CPS CA1 [20240427, 15-50-18].pdsprj  CPS CA1 [20240427, 15-56-57].pdsprj  CPS CA1 [20240427, 19-21-25].pdsprj  CPS CA1 [20240427, 19-23-26].pdsprj  CPS CA1 [20240427, 19-27-23].pdsprj  CPS CA1 [20240427, 19-50-38].pdsprj  CPS CA1 [20240427, 19-50-38].pdsprj.DESKTOP-2991RI6.bardia.workspace  CPS CA1 [20240428, 15-43-17].pdsprj  CPS CA1 [20240429, 10-04-41].pdsprj  CPS CA1 [20240429, 23-55-16].pdsprj  CPS CA1 [20240429, 23-58-59].pdsprj  CPS CA1 [20240501, 11-23-09].pdsprj  CPS CA1 [20240501, 16-46-28].pdsprj  CPS CA1 [20240501, 16-56-12].pdsprj  CPS CA1 [20240501, 18-14-29].pdsprj  CPS CA1 [20240501, 18-14-29].pdsprj.DESKTOP-2991RI6.bardia.workspace  CPS CA1 [20240501, 18-16-57].pdsprj  CPS CA1 [20240501, 18-20-24].pdsprj  CPS CA1 [20240501, 18-20-25].pdsprj  CPS CA1 [Autosaved].pdsprj
CA1/Proteus/sketch_apr27a/: sketch_apr27a.ino
CA1/Server/: CMakeLists.txt  CMakeLists.txt.user.288b99a  CMakeLists.txt.user.31513c2  CMakeLists.txt.user.dced99f  authenticator.cpp  authenticator.h  customizedhttpserver.cpp  customizedhttpserver.h  employee.h  employeesdatabase.cpp  employeesdatabase.h  loginhistory.cpp  loginhistory.h  loginhistorydatabase.cpp  loginhistorydatabase.h  main.cpp  request.cpp  request.h  response.cpp  response.h  socketserver.cpp  socketserver.h
CA1/Server/data/: employees.json  history.json
